# TerminalApp

./: LICENSE  README.md  pyproject.toml
docs/: CHANGELOG.md  README.md
docs/api/: README.md
docs/developer_guide/: README.md
docs/user_guide/: README.md
src/terminal_task_manager/: __init__.py  cli.py  models.py  storage.py
tests/: test_models.py
