[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terminal-task-manager"
version = "0.1.0"
description = "A cross-platform terminal task manager for improved productivity"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Udit Garg", email = "udit@uditgarg.me" }
]
dependencies = [
    "textual>=0.47.1",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
]

[project.scripts]
ttm = "terminal_task_manager.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/terminal_task_manager"] 